@@ -311,11 +311,11 @@ def execute(macro, text):
     p = Page(request, thispage)
     qpagenames = '*'.join(map(wikiutil.quoteWikinameURL, parmpagename))
     qtemplate = wikiutil.quoteWikinameURL(parmtemplate)
-    querystr = "calparms=%s,%d,%d,%d,%%d,%s" % (qpagenames, parmyear, parmmonth, parmoffset, qtemplate)
-    prevlink  = p.url(request, querystr % (parmoffset2 - 1), 0)
-    nextlink  = p.url(request, querystr % (parmoffset2 + 1), 0)
-    prevylink = p.url(request, querystr % (parmoffset2 - 12), 0)
-    nextylink = p.url(request, querystr % (parmoffset2 + 12), 0)
+    querystr = "calparms=%%s,%d,%d,%d,%%d,%%s" % (parmyear, parmmonth, parmoffset)
+    prevlink  = p.url(request, querystr % (qpagenames, parmoffset2 - 1, qtemplate), 0)
+    nextlink  = p.url(request, querystr % (qpagenames, parmoffset2 + 1, qtemplate), 0)
+    prevylink = p.url(request, querystr % (qpagenames, parmoffset2 - 12, qtemplate), 0)
+    nextylink = p.url(request, querystr % (qpagenames, parmoffset2 + 12, qtemplate), 0)
     prevmonth = formatter.url(1, prevlink, 'cal-link') + '&lt;' + formatter.url(0)
     nextmonth = formatter.url(1, nextlink, 'cal-link') + '&gt;' + formatter.url(0)
     prevyear  = formatter.url(1, prevylink, 'cal-link') + '&lt;&lt;' + formatter.url(0)
