@@ -33,6 +33,11 @@ Version 1.5.current:
     * We switched to Mercurial SCM, see here for more infos:
       http://moinmoin.wikiwikiweb.de/MoinDev/MercurialGuide
 
+  Bugfixes:
+    * fix MonthCalendar macro for non-ASCII pagenames (thanks to Jonas Smedegaard)
+    * remove 'search' and 'google' from bot user agent list and add some more
+      specific terms
+
 Version 1.5.3:
   New Features:
     * Added CSS classes for TableOfContents macro.
